--- a/scrape_page.ipynb
+++ b/scrape_page.ipynb
@@ -6,85 +6,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
-    "import urllib.request\n",
-    "import time\n",
-    "from bs4 import BeautifulSoup\n",
-    "import re\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "class carProperties(object):\n",
-    "    def __init__(self, url):\n",
-    "        self.url = url\n",
-    "        self._soup = None\n",
-    "        self.title = None\n",
-    "        self.price = None\n",
-    "        self.overview_dict = dict()\n",
-    "        self.consupmtion_attributes_dict = dict()\n",
-    "\n",
-    "        self.parse()\n",
-    "        self.build()\n",
-    "\n",
-    "    def parse(self):\n",
-    "        response = requests.get(self.url)\n",
-    "        self._soup = BeautifulSoup(response.text, 'html.parser')\n",
-    "\n",
-    "    def get_title(self):\n",
-    "        self.title = self._soup.findAll('h1')[0].text\n",
-    "\n",
-    "    def get_price(self):\n",
-    "        self.price = self._soup.body.findAll(text='Preis')[0].parent.parent.findAll('p')[1].text\n",
-    "\n",
-    "    def get_overview(self):\n",
-    "        self.overview_dict = {l.findChild('dt').text.replace(':','') :l.findChild('dd').text for l in self._soup.findAll('dl')}\n",
-    "\n",
-    "    def get_consumption(self):\n",
-    "        consupmtion_attributes_list =[\n",
-    "            'Verbrauch außerorts', 'Verbrauch kombiniert', 'Zugrunde liegende Treibstoffart',\n",
-    "            'CO2-Emissionen', 'Umweltplakette', 'Abgasnorm', 'Jahressteuer']\n",
-    "\n",
-    "        self.consupmtion_attributes_dict=dict()\n",
-    "\n",
-    "        for k in consupmtion_attributes_list:\n",
-    "            try:\n",
-    "                self.consupmtion_attributes_dict[k] = self._soup.body.findAll(text=k)[0].parent.parent.findAll('div')[1].text\n",
-    "            except:\n",
-    "                print(f'Attribute {k} not found')\n",
-    "\n",
-    "    def build(self):\n",
-    "        self.get_title()\n",
-    "        self.get_price()\n",
-    "        self.get_overview()\n",
-    "        self.get_consumption()\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "Attribute CO2-Emissionen not found\n"
-    }
-   ],
-   "source": [
-    "url = 'https://www.mahag.de/gebrauchte/fahrzeugsuche/?ahPg=show.vehicle.html&ahId=4317829'\n",
-    "\n",
-    "new_car = carProperties(url)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 98,
    "metadata": {
     "tags": [
      "outputPrepend"
@@ -93,69 +27,41 @@
    "outputs": [
     {
      "output_type": "stream",
-     "name": "stdout",
-     "text": "<class 'bs4.element.Tag'> \nÜbersicht Ausstattung\n\n\n ABS\n Antischlupfregelung\n Beifahrerairbag\n Berganfahrassistent\n Bluetooth\n Bordcomputer\n Freisprechanlage\n\n\n Handyvorbereitung\n ISOFIX vorbereitet\n Katalysator\n Klimaanlage\n Kopfairbag\n Lichtassistent\n MP3\n\n\n Multifunktionsdisplay\n Radio\n Reifendruckkontrolle\n Seitenairbag\n Servolenkung\n Sitzheizung\n Stabilitätsprogramm\n\n\n Start-/Stop-Automatik\n Tagfahrlicht\n USB-Schnittstelle\n Wegfahrsperre\n Zentralverriegelung\n el. Fensterheber\n elektr. Differentialsperre\n\n\n\n"
+     "name": "stderr",
+     "text": "100%|██████████| 5/5 [00:05<00:00,  1.09s/it]\n"
     }
    ],
    "source": [
-    "for l in new_car._soup.findAll(\"div\", {\"class\": \"container-equipment\"}):\n",
-    "    print(type(l),l.text)"
+    "cars_list = []\n",
+    "\n",
+    "with open('/home/leon/Documents/repos/car-prices-analysis/crawler/links copy.csv','r') as f:\n",
+    "    \n",
+    "    urls = [l.strip('\\n') for l in f.readlines()]\n",
+    "    \n",
+    "    for url in tqdm.tqdm(urls):\n",
+    "        cars_list.append(carProperties(url).get_data())\n",
+    "\n",
+    "    cars_df = pd.concat(cars_list,axis=1).T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "'6,0 l/100km'"
+      "text/plain": "                 brand  price  age power engine automatic_transmission  \\\n82-419980  Mini (BMW)   11490   65   102   1198                  False   \n75-41908    Volkswagen  11940   86   105   1197                   True   \n71-41507    Volkswagen   9240   38    60    999                   True   \n77-39243    Volkswagen  10850   55   110   1000                   True   \n77-40464    Volkswagen   8450  109   122   1390                   True   \n\n          guarantee motor_size prev_owners doors  ... Fernlichtassistent  \\\n82-419980      True       1198           2     3  ...              False   \n75-41908       True       1197           2     4  ...              False   \n71-41507       True        999           1     4  ...              False   \n77-39243       True       1000           1     4  ...              False   \n77-40464       True       1390           2     4  ...              False   \n\n          Kurvenlicht ISOFIX vorbereitet Schiebedach el. Heckklappe  \\\n82-419980       False              False       False          False   \n75-41908        False               True        True          False   \n71-41507        False               True       False          False   \n77-39243        False               True       False          False   \n77-40464        False               True       False          False   \n\n          Nebelleuchten elektr. Differentialsperre Multifunktionslenkrad  \\\n82-419980          True                      False                 False   \n75-41908          False                       True                 False   \n71-41507          False                       True                 False   \n77-39243           True                       True                 False   \n77-40464          False                       True                 False   \n\n          LED Heckleuchten   model  \n82-419980            False     NaN  \n75-41908             False    Golf  \n71-41507             False    Polo  \n77-39243             False    Polo  \n77-40464             False  Passat  \n\n[5 rows x 75 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>brand</th>\n      <th>price</th>\n      <th>age</th>\n      <th>power</th>\n      <th>engine</th>\n      <th>automatic_transmission</th>\n      <th>guarantee</th>\n      <th>motor_size</th>\n      <th>prev_owners</th>\n      <th>doors</th>\n      <th>...</th>\n      <th>Fernlichtassistent</th>\n      <th>Kurvenlicht</th>\n      <th>ISOFIX vorbereitet</th>\n      <th>Schiebedach</th>\n      <th>el. Heckklappe</th>\n      <th>Nebelleuchten</th>\n      <th>elektr. Differentialsperre</th>\n      <th>Multifunktionslenkrad</th>\n      <th>LED Heckleuchten</th>\n      <th>model</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>82-419980</th>\n      <td>Mini (BMW)</td>\n      <td>11490</td>\n      <td>65</td>\n      <td>102</td>\n      <td>1198</td>\n      <td>False</td>\n      <td>True</td>\n      <td>1198</td>\n      <td>2</td>\n      <td>3</td>\n      <td>...</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>True</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>75-41908</th>\n      <td>Volkswagen</td>\n      <td>11940</td>\n      <td>86</td>\n      <td>105</td>\n      <td>1197</td>\n      <td>True</td>\n      <td>True</td>\n      <td>1197</td>\n      <td>2</td>\n      <td>4</td>\n      <td>...</td>\n      <td>False</td>\n      <td>False</td>\n      <td>True</td>\n      <td>True</td>\n      <td>False</td>\n      <td>False</td>\n      <td>True</td>\n      <td>False</td>\n      <td>False</td>\n      <td>Golf</td>\n    </tr>\n    <tr>\n      <th>71-41507</th>\n      <td>Volkswagen</td>\n      <td>9240</td>\n      <td>38</td>\n      <td>60</td>\n      <td>999</td>\n      <td>True</td>\n      <td>True</td>\n      <td>999</td>\n      <td>1</td>\n      <td>4</td>\n      <td>...</td>\n      <td>False</td>\n      <td>False</td>\n      <td>True</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>True</td>\n      <td>False</td>\n      <td>False</td>\n      <td>Polo</td>\n    </tr>\n    <tr>\n      <th>77-39243</th>\n      <td>Volkswagen</td>\n      <td>10850</td>\n      <td>55</td>\n      <td>110</td>\n      <td>1000</td>\n      <td>True</td>\n      <td>True</td>\n      <td>1000</td>\n      <td>1</td>\n      <td>4</td>\n      <td>...</td>\n      <td>False</td>\n      <td>False</td>\n      <td>True</td>\n      <td>False</td>\n      <td>False</td>\n      <td>True</td>\n      <td>True</td>\n      <td>False</td>\n      <td>False</td>\n      <td>Polo</td>\n    </tr>\n    <tr>\n      <th>77-40464</th>\n      <td>Volkswagen</td>\n      <td>8450</td>\n      <td>109</td>\n      <td>122</td>\n      <td>1390</td>\n      <td>True</td>\n      <td>True</td>\n      <td>1390</td>\n      <td>2</td>\n      <td>4</td>\n      <td>...</td>\n      <td>False</td>\n      <td>False</td>\n      <td>True</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>True</td>\n      <td>False</td>\n      <td>False</td>\n      <td>Passat</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 75 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 167
+     "execution_count": 99
     }
    ],
    "source": [
-    "soup.body.findAll(text='Verbrauch innerorts')[0].parent.parent.findAll('div')[1].text"
+    "cars_df"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "\n <class 'bs4.element.NavigableString'>\n----------\n<h4 class=\"uk-margin-large-top\">Übersicht Ausstattung</h4> <class 'bs4.element.Tag'>\n----------\n\n <class 'bs4.element.NavigableString'>\n----------\n<div class=\"uk-grid\">\n<div class=\"uk-width-mini-1-1 uk-width-small-1-2 uk-width-large-1-4\">\n<img src=\"//homepage.autohausen.de/demo2.1/static/default/images/list-images/ok-3ebdcc.png\"/> ABS<br/>\n<img src=\"//homepage.autohausen.de/demo2.1/static/default/images/list-images/ok-3ebdcc.png\"/> Antischlupfregelung<br/>\n<img src=\"//homepage.autohausen.de/demo2.1/static/default/images/list-images/ok-3ebdcc.png\"/> Beifahrerairbag<br/>\n<img src=\"//homepage.autohausen.de/demo2.1/static/default/images/list-images/ok-3ebdcc.png\"/> Berganfahrassistent<br/>\n<img src=\"//homepage.autohausen.de/demo2.1/static/default/images/list-images/ok-3ebdcc.png\"/> Bluetooth<br/>\n<img src=\"//homepage.autohausen.de/demo2.1/static/default/images/list-images/ok-3ebdcc.png\"/> Bordcomputer<br/>\n<img src=\"//homepage.autohausen.de/demo2.1/static/default/images/list-images/ok-3ebdcc.png\"/> Freisprechanlage<br/>\n</div>\n<div class=\"uk-width-mini-1-1 uk-width-small-1-2 uk-width-large-1-4\">\n<img src=\"//homepage.autohausen.de/demo2.1/static/default/images/list-images/ok-3ebdcc.png\"/> Handyvorbereitung<br/>\n<img src=\"//homepage.autohausen.de/demo2.1/static/default/images/list-images/ok-3ebdcc.png\"/> ISOFIX vorbereitet<br/>\n<img src=\"//homepage.autohausen.de/demo2.1/static/default/images/list-images/ok-3ebdcc.png\"/> Katalysator<br/>\n<img src=\"//homepage.autohausen.de/demo2.1/static/default/images/list-images/ok-3ebdcc.png\"/> Klimaanlage<br/>\n<img src=\"//homepage.autohausen.de/demo2.1/static/default/images/list-images/ok-3ebdcc.png\"/> Kopfairbag<br/>\n<img src=\"//homepage.autohausen.de/demo2.1/static/default/images/list-images/ok-3ebdcc.png\"/> Lichtassistent<br/>\n<img src=\"//homepage.autohausen.de/demo2.1/static/default/images/list-images/ok-3ebdcc.png\"/> MP3<br/>\n</div>\n<div class=\"uk-width-mini-1-1 uk-width-small-1-2 uk-width-large-1-4\">\n<img src=\"//homepage.autohausen.de/demo2.1/static/default/images/list-images/ok-3ebdcc.png\"/> Multifunktionsdisplay<br/>\n<img src=\"//homepage.autohausen.de/demo2.1/static/default/images/list-images/ok-3ebdcc.png\"/> Radio<br/>\n<img src=\"//homepage.autohausen.de/demo2.1/static/default/images/list-images/ok-3ebdcc.png\"/> Reifendruckkontrolle<br/>\n<img src=\"//homepage.autohausen.de/demo2.1/static/default/images/list-images/ok-3ebdcc.png\"/> Seitenairbag<br/>\n<img src=\"//homepage.autohausen.de/demo2.1/static/default/images/list-images/ok-3ebdcc.png\"/> Servolenkung<br/>\n<img src=\"//homepage.autohausen.de/demo2.1/static/default/images/list-images/ok-3ebdcc.png\"/> Sitzheizung<br/>\n<img src=\"//homepage.autohausen.de/demo2.1/static/default/images/list-images/ok-3ebdcc.png\"/> Stabilitätsprogramm<br/>\n</div>\n<div class=\"uk-width-mini-1-1 uk-width-small-1-2 uk-width-large-1-4\">\n<img src=\"//homepage.autohausen.de/demo2.1/static/default/images/list-images/ok-3ebdcc.png\"/> Start-/Stop-Automatik<br/>\n<img src=\"//homepage.autohausen.de/demo2.1/static/default/images/list-images/ok-3ebdcc.png\"/> Tagfahrlicht<br/>\n<img src=\"//homepage.autohausen.de/demo2.1/static/default/images/list-images/ok-3ebdcc.png\"/> USB-Schnittstelle<br/>\n<img src=\"//homepage.autohausen.de/demo2.1/static/default/images/list-images/ok-3ebdcc.png\"/> Wegfahrsperre<br/>\n<img src=\"//homepage.autohausen.de/demo2.1/static/default/images/list-images/ok-3ebdcc.png\"/> Zentralverriegelung<br/>\n<img src=\"//homepage.autohausen.de/demo2.1/static/default/images/list-images/ok-3ebdcc.png\"/> el. Fensterheber<br/>\n<img src=\"//homepage.autohausen.de/demo2.1/static/default/images/list-images/ok-3ebdcc.png\"/> elektr. Differentialsperre<br/>\n</div>\n</div> <class 'bs4.element.Tag'>\n----------\n\n <class 'bs4.element.NavigableString'>\n----------\n"
-    }
-   ],
-   "source": [
-    "\n",
-    "for l1 in l.children:\n",
-    "    print(l1,type(l1))\n",
-    "    print('-'*10)\n",
-    "\n",
-    "# new_car._soup.body.findAll(text='Bordcomputer')\n",
-    "# .parent.parent.findAll('div')[1].text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "<img src=\"//homepage.autohausen.de/demo2.1/static/default/images/list-images/ok-3ebdcc.png\"/>"
-     },
-     "metadata": {},
-     "execution_count": 8
-    }
-   ],
-   "source": []
   }
  ],
  "metadata": {
