added cars schema in psql

--- a/scrape_page.ipynb
+++ b/scrape_page.ipynb
@@ -96,24 +96,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 111,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "TypeError",
-     "evalue": "__init__() got an unexpected keyword argument 'schema'",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-108-8ee0975b145a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mpgs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPostgresConnection\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdbname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'random'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mhost\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'192.168.1.218'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mschema\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'cars'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0muser\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'leon'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mpassword\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mgetpass\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetpass\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'PSQL password: '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mconn\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mconn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_table_from_df\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcars_df\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'fct_cars'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: __init__() got an unexpected keyword argument 'schema'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "with pgs.PostgresConnection(dbname='random',host='192.168.1.218',schema='cars',user='leon',password=getpass.getpass('PSQL password: ')) as conn:\n",
-    "    conn.create_table_from_df(cars_df,'fct_cars')"
+    "with pgs.PostgresConnection(dbname='random',host='192.168.1.218',user='leon',schema='cars',password=getpass.getpass('PSQL password: ')) as conn:\n",
+    "    conn.create_table_from_df(cars_df,'fct_cars')\n",
+    "    conn.insert_df(cars_df,'fct_cars')"
    ]
   },
   {
@@ -138,6 +127,16 @@
     "mod = smf.ols(formula='price ~ 0 + C(brand) + C(model) + ' + str(' + '.join(all_cols)), data=cars_df)\n",
     "res = mod.fit()\n",
     "print(res.summary())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "todo:\n",
+    "- plot correlation heatmap for exogenous variables\n",
+    "- remove multicolinearity\n",
+    "- check for other biases"
    ]
   }
  ],
